--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
         <h2>Projects</h2>
         <ul>
           <li>
-            <strong>Taskify</strong> - A task management app built with React
-            and Node.js.
+            <strong>COMP600-GarageGlide-GroupProject Public </strong> Group
+            project Car Garage System (Full Stack) - React SQL Typescript
           </li>
           <li>
-            <strong>CodeConnect</strong> - A social platform for developers to
-            share and collaborate on code.
+            <strong>Smart Fan Project</strong> - IoT final module project -
+            FireBeetle ESP 32 Device Humidity Sensor Blynk App
           </li>
           <li>
-            <strong>Portfolio Website</strong> - This portfolio site showcasing
-            my skills and projects.
+            <strong>Escape The Ghosts</strong> - Video Game Development Project
+            - AI Integration
           </li>
         </ul>
       </section>
